# individuals-api/src/main/java/by/itbatia/psp/individualsapi/exception/GlobalExceptionHandler.java
@@ -1,6 +1,6 @@
 package by.itbatia.psp.individualsapi.exception;
 
-import by.itbatia.individualsapi.dto.ErrorResponse;
+import by.itbatia.psp.individualsapi.dto.ErrorResponse;
 import lombok.extern.slf4j.Slf4j;
 import org.jspecify.annotations.NonNull;
 import org.springframework.http.ResponseEntity;
