# individuals-api/src/main/java/by/itbatia/psp/individualsapi/rest/impl/AuthController.java
@@ -1,62 +1,0 @@
-package by.itbatia.psp.individualsapi.rest.impl;
-
-import by.itbatia.individualsapi.dto.TokenRefreshRequest;
-import by.itbatia.individualsapi.dto.TokenResponse;
-import by.itbatia.individualsapi.dto.UserInfoResponse;
-import by.itbatia.individualsapi.dto.UserLoginRequest;
-import by.itbatia.individualsapi.dto.UserRegistrationRequest;
-import by.itbatia.psp.individualsapi.rest.AuthApi;
-import by.itbatia.psp.individualsapi.service.RestValidationService;
-import by.itbatia.psp.individualsapi.service.TokenService;
-import by.itbatia.psp.individualsapi.service.UserService;
-import by.itbatia.psp.individualsapi.util.RestUtil;
-import lombok.RequiredArgsConstructor;
-import org.jspecify.annotations.NonNull;
-import org.springframework.http.HttpStatus;
-import org.springframework.http.ResponseEntity;
-import org.springframework.security.access.prepost.PreAuthorize;
-import org.springframework.security.oauth2.jwt.Jwt;
-import org.springframework.web.bind.annotation.RestController;
-import reactor.core.publisher.Mono;
-
-/**
- * @author Batsian_SV
- */
-@RestController
-@RequiredArgsConstructor
-public class AuthController implements AuthApi {
-
-    private final UserService userService;
-    private final TokenService tokenService;
-    private final RestValidationService restValidationService;
-
-    @Override
-    public Mono<@NonNull ResponseEntity<@NonNull TokenResponse>> registerUser(UserRegistrationRequest request) {
-        restValidationService.validate(request);
-        return userService.register(request)
-            .map(tokenResponse -> ResponseEntity.status(HttpStatus.CREATED).body(tokenResponse));
-    }
-
-    @Override
-    public Mono<@NonNull ResponseEntity<@NonNull TokenResponse>> login(UserLoginRequest request) {
-        restValidationService.validate(request);
-        return tokenService.login(request.getEmail(), request.getPassword())
-            .map(ResponseEntity::ok);
-    }
-
-    @Override
-    public Mono<@NonNull ResponseEntity<@NonNull TokenResponse>> refreshToken(TokenRefreshRequest request) {
-        restValidationService.validate(request);
-        return tokenService.refresh(request.getRefreshToken())
-            .map(ResponseEntity::ok);
-    }
-
-    @Override
-    @PreAuthorize("hasRole('USER')")
-    public Mono<@NonNull ResponseEntity<@NonNull UserInfoResponse>> getCurrentUser(Jwt principal) {
-        String userId = principal.getSubject();
-        return userService.getCurrentUser(userId)
-            .doOnNext(userInfoResponse ->  RestUtil.enrichWithRoles(userInfoResponse, principal))
-            .map(ResponseEntity::ok);
-    }
-}
